[package]
name = "orbital_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.17"
instant = "0.1.12"
cgmath = "0.18.0"
bytemuck = {version = "1.12.1", features = ["derive"]}
pollster = "0.2.5"
wgpu = "0.14.0"
env_logger = "0.9.3"
winit = "0.27.5"
log = "0.4.16"
rayon = "1.6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.14", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
